--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -14,3 +14,11 @@ messages:
   insufficient-funds: "&cYou don't have enough funds."
   paid-sender: "&aYou paid &e{player} &a{amount}. New balance: &e{newBalance}"
   paid-target: "&aYou received &e{amount} &afrom &e{player}. New balance: &e{newBalance}"
+  gui-title: "&6&lYour Balance"
+  gui-balance-title: "Balance"
+  gui-current-balance: "Current Balance:"
+  gui-info-title: "Information"
+  gui-info-line1: "Use /pay to send money"
+  gui-info-line2: "Use /balance to check balance"
+  gui-info-line3: "Click the barrier to close"
+  gui-close: "Close"
